<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/title_app"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/background_search"
        app:cardCornerRadius="28dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="8dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_github"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hint_search_users"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="0dp"
                android:singleLine="true"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_circle_green"
                android:backgroundTint="@color/accent"
                android:elevation="4dp"
                android:padding="8dp"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_card">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:paddingTop="10dp"
            tools:itemCount="10"
            tools:listitem="@layout/item_user" />

        <include
            android:id="@+id/item_message"
            layout="@layout/item_message"
            android:visibility="gone" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_progress"
            android:indeterminate="true"
            android:padding="5dp"
            android:visibility="gone"
            app:indicatorColor="@color/accent"
            app:indicatorSize="27dp"
            app:trackColor="@color/placeholder"
            app:trackCornerRadius="10dp"
            app:trackThickness="4dp"
            tools:visibility="visible" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>