<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emptyStateRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/ic_github"
        android:tint="@color/image_info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        tools:text="Failed to load" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingMultiplier="1.4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_primary"
        tools:text="Please check your connection\nand try again." />
</LinearLayout>
